tests/errors/function-ref-param-shorthand.ari
fn take(&value: i64) -> i64 {
  return value;
}

fn main() -> i64 {
  return take(1);
}
